primitiveWrappersMap: new [PrimitiveType]() replaced by [PrimitiveType].valueOf. Added throws declaration to all methods. Added check for an object is an instance of the needed class in getFromReferencesMap().